--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/egretsRegrets/tables-for-angular-dev/issues"
   },
-  "homepage": "https://github.com/egretsRegrets/tables-for-angular-dev#readme"
+  "homepage": "https://github.com/egretsRegrets/tables-for-angular-dev#readme",
+  "devDependencies": {
+    "copy-webpack-plugin": "^5.0.3",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.2"
+  },
+  "dependencies": {
+    "ejs": "^2.6.2",
+    "express": "^4.17.1"
+  }
 }
