--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a working project for developing tables-for-angular library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,8 @@
     "copy-webpack-plugin": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.2",
-    "webpack": "^4.35.2"
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
     "ejs": "^2.6.2",
