--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node server.js"
+    "serve": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,14 +25,24 @@
   },
   "homepage": "https://github.com/egretsRegrets/tables-for-angular-dev#readme",
   "devDependencies": {
+    "@angular/compiler-cli": "^8.1.1",
+    "@ngtools/webpack": "^8.1.1",
     "copy-webpack-plugin": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.2",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "typescript": "^3.4.5",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
   "dependencies": {
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
     "ejs": "^2.6.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1"
   }
 }
