--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngtools/webpack": "^8.1.1",
     "copy-webpack-plugin": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^3.0.0",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "typescript": "^3.4.5",
     "webpack": "^4.35.2",
