--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "serve": "node server.js"
+    "start": "node server.js",
+    "watch": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
     "script-ext-html-webpack-plugin": "^2.1.4",
     "typescript": "^3.4.5",
     "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@angular/common": "^8.1.1",
