--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "node server.js",
-    "watch": "webpack-dev-server"
+    "watch": "webpack-dev-server",
+    "db": "json-server --watch db/db.json",
+    "dev": "concurrently \"npm:db\"  \"npm:watch\""
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^8.1.1",
     "@ngtools/webpack": "^8.1.1",
+    "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.0.0",
