--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@ngtools/webpack": "^8.1.1",
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "raw-loader": "^3.0.0",
     "script-ext-html-webpack-plugin": "^2.1.4",
+    "to-string-loader": "^1.1.5",
     "typescript": "^3.4.5",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
