--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,15 @@
 {
     "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["dom", "esnext"]
-    }    
+        "noImplicitAny": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "lib": ["es6", "dom"],
+        "typeRoots": ["node_modules/@types"]
+    },
+    "exclude": ["node_modules"]
 }
